# email-app

./: .gitignore  LICENSE  README.md  README.ru.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
email_app/: __init__.py  read.py  send.py  servers.json  types.py  utils.py
tests/: test_read.py  test_send.py
tests/attachments/: test.xlsx
